--- a/chat.html
+++ b/chat.html
@@ -247,14 +247,15 @@ supabase.channel(typingChannel).on('broadcast',{event:'typing'},({payload})=>{
   }
 }).subscribe();
 // -------------------- WEBRTC --------------------
-let pc = null, localStream = null, remoteStream = null, audioCtx=null, analyser=null, source=null;
+let pc = null, localStream = null, remoteStream = null;
+let audioCtx = null, analyser = null, source = null;
 
+// -------------------- PEER CONNECTION --------------------
 function ensurePeer() {
   if (pc) return pc;
 
   pc = new RTCPeerConnection({ iceServers: [{ urls: 'stun:stun.l.google.com:19302' }] });
 
-  // When a remote track is added
   pc.ontrack = (event) => {
     if (!remoteStream) remoteStream = new MediaStream();
     remoteStream.addTrack(event.track);
@@ -270,125 +271,138 @@ function ensurePeer() {
   return pc;
 }
 
-// Send signaling through Supabase channel
-function sendSignal(payload) {
-  supabase.channel('webrtc-' + [hc_profile.email, chatUser.email].sort().join('-'))
-    .send({ type: 'broadcast', event: 'signal', payload: { from: hc_profile.email, to: chatUser.email, ...payload } });
+// -------------------- SIGNALING --------------------
+function sendSignal(payload){
+  supabase.channel('webrtc-'+[hc_profile.email, chatUser.email].sort().join('-'))
+    .send({ type:'broadcast', event:'signal', payload:{ from: hc_profile.email, to: chatUser.email, ...payload } });
 }
 
-// Receive signaling
-supabase.channel('webrtc-' + [hc_profile.email, chatUser.email].sort().join('-'))
-  .on('broadcast', { event: 'signal' }, async ({ payload }) => {
-    if (!payload || payload.to !== hc_profile.email) return;
+supabase.channel('webrtc-'+[hc_profile.email, chatUser.email].sort().join('-'))
+  .on('broadcast', {event:'signal'}, async ({payload})=>{
+    if(!payload || payload.to!==hc_profile.email) return;
 
-    switch (payload.type) {
-      case 'call-offer':
-        showCallModal('incoming', payload.callType, payload.sdp);
-        break;
-      case 'call-answer':
-        await ensurePeer().setRemoteDescription(new RTCSessionDescription(payload.sdp));
-        break;
-      case 'candidate':
-        try { await ensurePeer().addIceCandidate(new RTCIceCandidate(payload.candidate)); } catch (err) { console.error(err); }
-        break;
+    switch(payload.type){
+      case 'call-offer': showCallModal('incoming', payload.callType, payload.sdp); break;
+      case 'call-answer': await ensurePeer().setRemoteDescription(new RTCSessionDescription(payload.sdp)); break;
+      case 'candidate': try{ await ensurePeer().addIceCandidate(new RTCIceCandidate(payload.candidate)); }catch(e){console.error(e);} break;
+      case 'call-end': endCall(); break;
     }
   }).subscribe();
 
 // -------------------- CALL MODAL --------------------
-function showCallModal(mode, streamOrType='video', sdp=null) {
-  const existing = document.querySelector('.call-modal'); if (existing) existing.remove();
-  const modal = document.createElement('div'); modal.className = 'call-modal';
-  Object.assign(modal.style, { position: 'fixed', inset: 0, display: 'flex', alignItems: 'center', justifyContent: 'center', background: 'rgba(0,0,0,0.5)', zIndex: 1000 });
+function showCallModal(mode, type='video', sdp=null){
+  const existing = document.querySelector('.call-modal'); if(existing) existing.remove();
+  const modal = document.createElement('div'); modal.className='call-modal';
+  Object.assign(modal.style,{position:'fixed',inset:0,display:'flex',alignItems:'center',justifyContent:'center',background:'rgba(0,0,0,0.5)',zIndex:1000});
 
   const card = document.createElement('div');
-  Object.assign(card.style, { background: '#fff', borderRadius: '16px', padding: '20px', width: '320px', display: 'flex', flexDirection: 'column', gap: '12px', textAlign: 'center', boxShadow: '0 8px 24px rgba(0,0,0,0.2)' });
+  Object.assign(card.style,{background:'#fff',borderRadius:'16px',padding:'20px',width:'320px',display:'flex',flexDirection:'column',gap:'12px',textAlign:'center',boxShadow:'0 8px 24px rgba(0,0,0,0.2)'});
 
-  const title = document.createElement('div'); title.style.fontWeight = '600'; title.style.fontSize = '16px'; title.style.marginBottom = '4px';
-  const sub = document.createElement('div'); sub.style.color = '#6b7280'; sub.style.fontSize = '13px';
-  const btnContainer = document.createElement('div'); Object.assign(btnContainer.style, { display: 'flex', justifyContent: 'center', gap: '12px' });
+  const title = document.createElement('div'); title.style.fontWeight='600'; title.style.fontSize='16px'; title.style.marginBottom='4px';
+  const sub = document.createElement('div'); sub.style.color='#6b7280'; sub.style.fontSize='13px';
+  const btnContainer = document.createElement('div'); Object.assign(btnContainer.style,{display:'flex',justifyContent:'center',gap:'12px'});
 
-  if (mode === 'incoming') {
-    title.textContent = 'Incoming Call'; sub.textContent = 'Tap Accept to join';
-    const accept = document.createElement('button'); accept.textContent = 'Accept';
-    Object.assign(accept.style, { background: '#16a34a', color: '#fff', border: 'none', padding: '10px 16px', borderRadius: '12px', cursor: 'pointer' });
-    accept.onclick = async () => {
-      localStream = await navigator.mediaDevices.getUserMedia(streamOrType === 'video' ? { video: true, audio: true } : { audio: true });
-      localStream.getTracks().forEach(track => ensurePeer().addTrack(track, localStream));
+  if(mode==='incoming'){
+    title.textContent='Incoming Call'; sub.textContent='Tap Accept to join';
+
+    const accept = document.createElement('button'); accept.textContent='Accept';
+    Object.assign(accept.style,{background:'#16a34a',color:'#fff',border:'none',padding:'10px 16px',borderRadius:'12px',cursor:'pointer'});
+    accept.onclick=async()=>{
+      localStream = await navigator.mediaDevices.getUserMedia(type==='video'?{video:true,audio:true}:{audio:true});
+      localStream.getTracks().forEach(track=>ensurePeer().addTrack(track, localStream));
       await ensurePeer().setRemoteDescription(new RTCSessionDescription(sdp));
       const answer = await ensurePeer().createAnswer();
       await ensurePeer().setLocalDescription(answer);
-      sendSignal({ type: 'call-answer', sdp: answer });
-      showLocalStream(localStream);
-      if (streamOrType === 'audio') visualizeAudio(localStream);
+      sendSignal({type:'call-answer',sdp:answer});
+      showLocalStream(localStream, type);
+      if(type==='audio') visualizeAudio(localStream);
       modal.remove();
     };
-    const decline = document.createElement('button'); decline.textContent = 'Decline';
-    Object.assign(decline.style, { background: '#ef4444', color: '#fff', border: 'none', padding: '10px 16px', borderRadius: '12px', cursor: 'pointer' });
-    decline.onclick = () => { modal.remove(); };
-    btnContainer.append(accept, decline);
-  } else if (mode === 'outgoing') {
-    title.textContent = `Calling ${chatUser.name}`; sub.textContent = 'Ringing...';
-    const cancel = document.createElement('button'); cancel.textContent = 'Cancel';
-    Object.assign(cancel.style, { background: '#6b7280', color: '#fff', border: 'none', padding: '10px 16px', borderRadius: '12px', cursor: 'pointer' });
-    cancel.onclick = () => { modal.remove(); };
+
+    const decline = document.createElement('button'); decline.textContent='Decline';
+    Object.assign(decline.style,{background:'#ef4444',color:'#fff',border:'none',padding:'10px 16px',borderRadius:'12px',cursor:'pointer'});
+    decline.onclick=()=>{ sendSignal({type:'call-end'}); endCall(); modal.remove(); };
+    btnContainer.append(accept,decline);
+
+  } else if(mode==='outgoing'){
+    title.textContent=`Calling ${chatUser.name}`; sub.textContent='Ringing...';
+    const cancel=document.createElement('button'); cancel.textContent='Cancel';
+    Object.assign(cancel.style,{background:'#6b7280',color:'#fff',border:'none',padding:'10px 16px',borderRadius:'12px',cursor:'pointer'});
+    cancel.onclick=()=>{ sendSignal({type:'call-end'}); endCall(); modal.remove(); };
     btnContainer.append(cancel);
-    if (streamOrType === 'object') { // remote stream
-      const video = document.createElement('video'); video.autoplay = true; video.playsInline = true; video.srcObject = streamOrType;
-      Object.assign(video.style, { width: '260px', height: '200px', borderRadius: '12px', objectFit: 'cover' });
+
+  } else if(mode==='remote'){
+    title.textContent='Call Connected'; sub.textContent='';
+    if(type instanceof MediaStream){
+      const video=document.createElement('video'); video.autoplay=true; video.playsInline=true; video.srcObject=type;
+      Object.assign(video.style,{width:'260px',height:'200px',borderRadius:'12px',objectFit:'cover'});
       card.append(video);
-    }
-  } else if (mode === 'remote') {
-    title.textContent = 'Call Connected'; sub.textContent = '';
-    const video = document.createElement('video'); video.autoplay = true; video.playsInline = true; video.srcObject = streamOrType;
-    Object.assign(video.style, { width: '260px', height: '200px', borderRadius: '12px', objectFit: 'cover' });
-    card.append(video);
-    const endBtn = document.createElement('button'); endBtn.textContent = 'End Call';
-    Object.assign(endBtn.style, { background: '#ef4444', color: '#fff', border: 'none', padding: '10px 16px', borderRadius: '12px', cursor: 'pointer' });
-    endBtn.onclick = () => { if (pc) { pc.close(); pc = null; } modal.remove(); removeLocalStream(); };
+    } else if(type==='audio'){ showVoiceUI(); }
+
+    const endBtn=document.createElement('button'); endBtn.textContent='End Call';
+    Object.assign(endBtn.style,{background:'#ef4444',color:'#fff',border:'none',padding:'10px 16px',borderRadius:'12px',cursor:'pointer'});
+    endBtn.onclick=()=>{ sendSignal({type:'call-end'}); endCall(); modal.remove(); };
+
     btnContainer.append(endBtn);
   }
 
-  card.append(btnContainer);
-  modal.append(card);
-  document.body.append(modal);
+  card.append(btnContainer); modal.append(card); document.body.append(modal);
 }
 
-function showLocalStream(stream) {
+// -------------------- LOCAL STREAM --------------------
+function showLocalStream(stream, type='video'){
   removeLocalStream();
-  const video = document.createElement('video'); video.autoplay = true; video.playsInline = true; video.muted = true; video.srcObject = stream;
-  Object.assign(video.style, { width: '120px', height: '100px', position: 'fixed', bottom: '20px', right: '20px', borderRadius: '12px', objectFit: 'cover', zIndex: 1000 });
-  video.className = 'local-stream';
+  const video=document.createElement('video'); video.autoplay=true; video.playsInline=true; video.muted=true; video.srcObject=stream;
+  Object.assign(video.style,{width:type==='video'?120:0,height:type==='video'?100:0,position:'fixed',bottom:'20px',right:'20px',borderRadius:'12px',objectFit:'cover',zIndex:1000});
+  video.className='local-stream';
   document.body.append(video);
 }
 
-function removeLocalStream() { const existing = document.querySelector('.local-stream'); if (existing) existing.remove(); }
+// -------------------- REMOVE STREAM --------------------
+function removeLocalStream(){ const v=document.querySelector('.local-stream'); if(v) v.remove(); }
+function removeRemoteAudio(){ const a=document.querySelector('.remote-audio'); if(a) a.remove(); }
 
 // -------------------- REMOTE AUDIO --------------------
-function playRemoteAudio(stream) {
-  let audio = document.querySelector('.remote-audio');
-  if (!audio) {
-    audio = document.createElement('audio'); audio.autoplay = true; audio.className = 'remote-audio'; document.body.append(audio);
-  }
-  audio.srcObject = stream;
+function playRemoteAudio(stream){
+  let audio=document.querySelector('.remote-audio');
+  if(!audio){ audio=document.createElement('audio'); audio.autoplay=true; audio.className='remote-audio'; document.body.append(audio); }
+  audio.srcObject=stream;
 }
 
-// -------------------- AUDIO VISUALIZATION --------------------
-function visualizeAudio(stream) {
-  audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+// -------------------- AUDIO VISUALIZATION (VOICE WAVE) --------------------
+function visualizeAudio(stream){
+  audioCtx = new (window.AudioContext||window.webkitAudioContext)();
   source = audioCtx.createMediaStreamSource(stream);
   analyser = audioCtx.createAnalyser();
   source.connect(analyser);
-  analyser.fftSize = 256;
+  analyser.fftSize=256;
   const dataArray = new Uint8Array(analyser.frequencyBinCount);
 
-  function update() {
+  // Voice wave UI
+  let micIcon = document.querySelector('.mic-icon');
+  if(!micIcon){
+    micIcon = document.createElement('div'); micIcon.className='mic-icon';
+    Object.assign(micIcon.style,{width:'40px',height:'40px',borderRadius:'50%',background:'#007aff',position:'fixed',bottom:'20px',left:'20px',display:'flex',alignItems:'center',justifyContent:'center',color:'#fff',fontSize:'18px',zIndex:1000});
+    micIcon.textContent='🎤';
+    document.body.append(micIcon);
+  }
+
+  function update(){
     analyser.getByteFrequencyData(dataArray);
     const volume = dataArray.reduce((a,b)=>a+b,0)/dataArray.length;
-    // Simple speaking visualization: change input border color
-    inputEl.style.borderColor = volume>20?'#16a34a':'#ccc';
+    micIcon.style.transform=`scale(${1 + volume/150})`;
     requestAnimationFrame(update);
   }
   update();
+}
+
+// -------------------- END CALL --------------------
+function endCall(){
+  if(pc){ pc.close(); pc=null; }
+  if(localStream){ localStream.getTracks().forEach(t=>t.stop()); localStream=null; }
+  if(remoteStream){ remoteStream.getTracks().forEach(t=>t.stop()); remoteStream=null; }
+  removeLocalStream(); removeRemoteAudio();
+  const micIcon=document.querySelector('.mic-icon'); if(micIcon) micIcon.remove();
 }
 
 // -------------------- START CALL --------------------
@@ -396,11 +410,11 @@ async function startCall(type='video'){
   if(chatStatusEl.textContent!=='Online') return;
   showCallModal('outgoing',type);
   localStream = await navigator.mediaDevices.getUserMedia(type==='video'?{video:true,audio:true}:{audio:true});
-  localStream.getTracks().forEach(track => ensurePeer().addTrack(track, localStream));
+  localStream.getTracks().forEach(track=>ensurePeer().addTrack(track,localStream));
   const offer = await ensurePeer().createOffer();
   await ensurePeer().setLocalDescription(offer);
-  sendSignal({ type:'call-offer', callType:type, sdp:offer });
-  showLocalStream(localStream);
+  sendSignal({type:'call-offer', callType:type, sdp:offer});
+  showLocalStream(localStream,type);
   if(type==='audio') visualizeAudio(localStream);
 }
 
